Add missing headings

--- a/help/_includes/backward-incompatible-changes/1.4.2-1.5.0.md
+++ b/help/_includes/backward-incompatible-changes/1.4.2-1.5.0.md
@@ -1,4 +1,8 @@
-#### Class changes {#b2b-BICs-142-150-class}
+# B2B backward incompatible changes between 1.4.2 and 1.5.0
+
+## 1.4.2-1.5.0
+
+### Class changes {#b2b-BICs-142-150-class}
 
 | What changed | How it changed |
 | --- | --- |
@@ -9,7 +13,7 @@
 | Magento\NegotiableQuoteTemplate\Block\Quote\Action\CreateTemplate | Class was added. |
 | Magento\NegotiableQuoteTemplate\Block\Template\View | Class was added. |
 
-#### Interface changes {#b2b-BICs-142-150-interface}
+### Interface changes {#b2b-BICs-142-150-interface}
 
 | What changed | How it changed |
 | --- | --- |
@@ -48,7 +52,7 @@
 | Magento\NegotiableQuote\Api\NegotiableQuoteBuyerDraftManagementInterface | Interface was added. |
 | Magento\NegotiableQuote\Api\RenameNegotiableQuoteInterface | Interface was added. |
 
-#### Database changes {#b2b-BICs-142-150-database}
+### Database changes {#b2b-BICs-142-150-database}
 
 | What changed | How it changed |
 | --- | --- |
@@ -64,18 +68,18 @@
 | negotiable\_quote\_template\_grid | Table was added |
 | negotiable\_template\_generated\_quote | Table was added |
 
-#### Di changes {#b2b-BICs-142-150-di}
+### Di changes {#b2b-BICs-142-150-di}
 
 | What changed | How it changed |
 | --- | --- |
 
-#### System changes {#b2b-BICs-142-150-system}
+### System changes {#b2b-BICs-142-150-system}
 
 | What changed | How it changed |
 | --- | --- |
 | system.xml | System configuration file was added |
 
-#### Class API membership changes {#b2b-BICs-142-150-class-api-membership}
+### Class API membership changes {#b2b-BICs-142-150-class-api-membership}
 
 | What changed | How it changed |
 | --- | --- |
