Include BIC tables to the topic

--- a/help/_includes/backward-incompatible-changes/1.5.0-1.5.1.md
+++ b/help/_includes/backward-incompatible-changes/1.5.0-1.5.1.md
@@ -1,4 +1,8 @@
-#### Class changes {#b2b-BICs-150-151-class}
+# B2B backward incompatible changes between 1.5.0 and 1.5.1
+
+## 1.5.0-1.5.1
+
+### Class changes {#b2b-BICs-150-151-class}
 
 | What changed | How it changed |
 | --- | --- |
@@ -11,7 +15,7 @@
 | Magento\PurchaseOrder\Block\PurchaseOrder\Info\Buttons::\_\_construct | [public] Method parameter typing changed. |
 | Magento\RequisitionList\Block\Requisition\View\Item::\_\_construct | [public] Method parameter typing changed. |
 
-#### Interface changes {#b2b-BICs-150-151-interface}
+### Interface changes {#b2b-BICs-150-151-interface}
 
 | What changed | How it changed |
 | --- | --- |
@@ -23,7 +27,7 @@
 | Magento\PurchaseOrder\Api\Data\PurchaseOrderSearchResultsInterface::setItems | [public] Method parameter typing changed. |
 | Magento\PurchaseOrder\Api\PurchaseOrderPaymentInformationManagementInterface::savePaymentInformationAndPlacePurchaseOrder | [public] Method parameter typing changed. |
 
-#### Layout changes {#b2b-BICs-150-151-layout}
+### Layout changes {#b2b-BICs-150-151-layout}
 
 | What changed | How it changed |
 | --- | --- |
