Combine highlight and reference within an include

--- a/help/_includes/backward-incompatible-changes/1.4.2-1.5.0.md
+++ b/help/_includes/backward-incompatible-changes/1.4.2-1.5.0.md
@@ -2,6 +2,15 @@
 
 ## 1.4.2-1.5.0
 
+### Highlights {#b2b-BICs-142-150-highlights}
+
+With the addition of multi-company assignment, company user accounts can now have multiple `company_id` values. The `Magento\Company\Api\Data\CompanyCustomerInterface` was updated to set the default `company_id` for a user. The default is set to the first company assigned to the company user account.
+
+If you are upgrading from a previous release, Adobe recommends implementing the following methods in classes that use the `Magento\Company\Api\Data\CompanyCustomerInterface`.
+
+- Magento\Company\Api\Data\CompanyCustomerInterface::getIsDefault
+- Magento\Company\Api\Data\CompanyCustomerInterface::setIsDefault
+
 ### Class changes {#b2b-BICs-142-150-class}
 
 | What changed | How it changed |
