--- a/help/_includes/backward-incompatible-changes/1.5.1-1.5.2.md
+++ b/help/_includes/backward-incompatible-changes/1.5.1-1.5.2.md
@@ -2,23 +2,38 @@
 
 ## 1.5.1-1.5.2
 
-### Interface changes {#b2b-BICs-151-152-interface}
+### Interface changes
 
-| What changed | How it changed |
-| --- | --- |
-| Magento\Company\Api\Data\StructureInterface | Added parent to interface. |
-| Magento\Company\Api\Data\StructureInterface::COMPANY\_ID | Constant has been added. |
-| Magento\Company\Api\Data\StructureInterface::getCompanyId | [public] Method has been added. |
-| Magento\Company\Api\Data\StructureInterface::getExtensionAttributes | [public] Method has been added. |
-| Magento\Company\Api\Data\StructureInterface::setCompanyId | [public] Method has been added. |
-| Magento\Company\Api\Data\StructureInterface::setExtensionAttributes | [public] Method has been added. |
-| Magento\NegotiableQuoteTemplate\Api\Data\ReferenceDocumentLinkInterface | Interface was added. |
-| Magento\NegotiableQuoteTemplate\Api\Template\ReferenceDocumentLinkRepositoryInterface | Interface was added. |
+#### Added parent to interface
 
-### Database changes {#b2b-BICs-151-152-database}
+- Magento\Company\Api\Data\StructureInterface
 
-| What changed | How it changed |
-| --- | --- |
-| company\_structure/COMPANY\_STRUCTURE\_COMPANY\_ID\_COMPANY\_ENTITY\_ID | Foreign key was added |
-| company\_structure/company\_id | Column was added |
-| negotiable\_quote\_template\_reference\_document\_link | Table was added |
+#### Constant has been added
+
+- Magento\Company\Api\Data\StructureInterface::COMPANY_ID
+
+#### Interface was added
+
+- Magento\NegotiableQuoteTemplate\Api\Data\ReferenceDocumentLinkInterface
+- Magento\NegotiableQuoteTemplate\Api\Template\ReferenceDocumentLinkRepositoryInterface
+
+#### [public] Method has been added
+
+- Magento\Company\Api\Data\StructureInterface::getCompanyId
+- Magento\Company\Api\Data\StructureInterface::getExtensionAttributes
+- Magento\Company\Api\Data\StructureInterface::setCompanyId
+- Magento\Company\Api\Data\StructureInterface::setExtensionAttributes
+
+### Database changes
+
+#### Column was added
+
+- company_structure/company_id
+
+#### Foreign key was added
+
+- company_structure/COMPANY_STRUCTURE_COMPANY_ID_COMPANY_ENTITY_ID
+
+#### Table was added
+
+- negotiable_quote_template_reference_document_link
